Refactor and enhance Brobot application architecture
               - Refactor state and pattern management to prevent duplicates
               - Improve logging and error handling throughout the application
               - Restructure database configuration and resolve connection issues
               - Implement WebSocket for real-time log updates
               - Upgrade UI components to Material-UI for consistent styling
               - Optimize React components and fix context-related bugs
               - Improve project selection and persistence in the UI
               - Resolve CORS and API connection issues
               - Enhance state image and transition management